# hackathon

./: .gitignore  README.md  app.py  chatbot.py  config.toml  infographics_tool.py  login.py  mcp_client.py  pyproject.toml  requirements.txt  search_server.py  st_newchat.py  telegram_annoucement_tool.py
app/: get_tools.py  main.py  orchestrator.py  utils.py
frontend/: app.py  chatbot.py  config.toml  login.py  st_newchat.py
frontend/.streamlit/: config.toml
frontend/pages/: st_newchat.py
mcp_server/: server.py
mcp_server/functions/: ingesting.ipynb
mcp_server/tools/: infographics_tool.py  qr_code_replacement_helper.py  qr_detection_tool.py  search_best_prac.py  telegram_announcement.py
pages/: st_newchat.py
prev_response/: last_response_id.txt
prompt/: gen_prompt.py
