[project]
name = "marketing-mcp-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.0",
    "google-genai>=1.24.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.6",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.1",
    "llm>=0.26",
    "mcp>=1.10.1",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
]
